--- a/WebAI-Agent/package.json
+++ b/WebAI-Agent/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^22.6.0",
+    "dotenv": "^16.4.5",
+    "openai": "^4.31.0",
+    "puppeteer": "^22.6.1",
+    "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
